operator/pkg/gateway-api/testdata/gateway/udproute-invalid-reference-grant/input/udproute-invalid-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: reference-grant-wrong-kind
  namespace: gateway-conformance-web-backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Service
      name: web-backend
---
apiVersion: gateway.networking.k8s.io/v1
kind: UDPRoute
metadata:
  name: reference-grant
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-udproute-referencegrant
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: web-backend
          namespace: gateway-conformance-web-backend
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-udproute-referencegrant
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: udp
      port: 5353
      protocol: UDP
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: UDPRoute
